tests/snapshots/run_wpt_conformance__trtx_reduceLogSumExp_avoids_overflows_caused_by_taking_the_exp_of_large_inputs.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "reduce_log_sum_exp.https.any.js",
    "reduceLogSumExp avoids overflows caused by taking the exp of large inputs",
    "trtx",
    Failed {
        msg: Some(
            "reduce_log_sum_exp :: reduceLogSumExp avoids overflows caused by taking the exp of large inputs: index 0: actual=inf expected=100 ulp=4294967295 tolerance=32\n  inputs: reduceLogSumExpInput: [100]\n  expected reduceLogSumExpOutput: [100]\n  actual reduceLogSumExpOutput: [inf]\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    reduceLogSumExpInput: f32[1];\n  }\n\n  nodes {\n    [reduceLogSumExpOutput] = reduceLogSumExp(reduceLogSumExpInput, axes=[0], keepDimensions=false, label=\"\");\n  }\n\n  outputs { reduceLogSumExpOutput; }\n}\n",
        ),
    },
)
