tests/snapshots/run_wpt_conformance__trtx_reduceLogSumExp_avoids_underflows_caused_by_taking_the_log_of_small_inputs.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "reduce_log_sum_exp.https.any.js",
    "reduceLogSumExp avoids underflows caused by taking the log of small inputs",
    "trtx",
    Failed {
        msg: Some(
            "reduce_log_sum_exp :: reduceLogSumExp avoids underflows caused by taking the log of small inputs: index 0: actual=-99.98309 expected=-100 ulp=2216 tolerance=32\n  inputs: reduceLogSumExpInput: [-100]\n  expected reduceLogSumExpOutput: [-100]\n  actual reduceLogSumExpOutput: [-99.98309]\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    reduceLogSumExpInput: f32[1];\n  }\n\n  nodes {\n    [reduceLogSumExpOutput] = reduceLogSumExp(reduceLogSumExpInput, axes=[0], keepDimensions=false, label=\"\");\n  }\n\n  outputs { reduceLogSumExpOutput; }\n}\n",
        ),
    },
)
