tests/snapshots/run_wpt_conformance__trtx_reduceLogSumExp_float16_1D_tensor_all_positive_integers_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_log_sum_exp.https.any.js",
    "reduceLogSumExp float16 1D tensor all positive integers default options",
    "trtx",
    "PASS",
)
